<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Felipe Joglar Santos
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/songs_motion_scene"
    tools:context=".song.SongFragment">

    <ImageView
        android:id="@+id/imageview_song_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_cover"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/song_gradient_cover"
        app:layout_constraintBottom_toBottomOf="@id/imageview_song_cover"
        app:layout_constraintEnd_toEndOf="@id/imageview_song_cover"
        app:layout_constraintStart_toStartOf="@id/imageview_song_cover"
        app:layout_constraintTop_toTopOf="@id/imageview_song_cover" />

    <ImageView
        android:id="@+id/imageview_song_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/actionBarItemBackground"
        android:clickable="true"
        android:contentDescription="@string/song_home_content_description"
        android:focusable="true"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_normal"
        android:src="@drawable/song_ic_arrow_back_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageview_song_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/actionBarItemBackground"
        android:clickable="true"
        android:contentDescription="@string/song_share_content_description"
        android:focusable="true"
        android:paddingStart="@dimen/padding_normal"
        android:paddingTop="@dimen/padding_normal"
        android:paddingEnd="@dimen/padding_normal"
        android:paddingBottom="@dimen/padding_normal"
        android:src="@drawable/song_ic_share_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_song_titlebackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryLight"
        android:minHeight="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_song_cover">

        <TextView
            android:id="@+id/textview_song_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingStart="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:textSize="24sp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/textview_song_artist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/textview_song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_normal"
            android:paddingLeft="@dimen/padding_normal"
            android:paddingEnd="@dimen/padding_normal"
            android:paddingRight="@dimen/padding_normal"
            android:paddingBottom="@dimen/padding_small"
            android:textSize="18sp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_song_title"
            tools:text="@tools:sample/full_names" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedscrollview_song_lyricscontainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_song_titlebackground">

        <TextView
            android:id="@+id/textview_song_lyrics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_serif"
            android:gravity="center"
            android:lineSpacingMultiplier="1.15"
            android:padding="@dimen/padding_normal"
            android:textSize="16sp"
            tools:text="@tools:sample/lorem/random" />
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressbar_song_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingactionbutton_song_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/layout_margin_normal"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/song_ic_favorite_border_24dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="@id/imageview_song_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_song_cover" />
</androidx.constraintlayout.motion.widget.MotionLayout>